--- a/drip-store/src/components/Header/Header.css
+++ b/drip-store/src/components/Header/Header.css
@@ -1,14 +1,15 @@
 #header {
-    border: 1px solid red;
+    background-color: white;
     width: 100%;
 }
 
 #header .box-header {
-    border: 1px solid red;
+    background-color: white;
     width: 90rem;
     height: 12rem;
     margin: 0 auto;
     padding: 0 6.250rem;
+    display: flex;
 }
 
 #header .box-header .box-header-children {
@@ -16,4 +17,5 @@
     width: 62.063rem;
     height: 8.063rem;
     margin-top: 2.125rem;
+    display: flex;
 }
